# JABP

./: .gitignore  README.md  index-old.html  index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
